// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin in a stock JBrowse 1`] = `
Object {
  "index": Object {
    "location": Object {
      "baseUri": "",
      "uri": "/path/to/my.vcf.gz.tbi",
    },
  },
  "type": "VcfTabixAdapter",
  "vcfGzLocation": Object {
    "baseUri": "",
    "uri": "/path/to/my.vcf.gz",
  },
}
`;

exports[`plugin in a stock JBrowse 2`] = `
Object {
  "adapter": Object {
    "index": Object {
      "location": Object {
        "baseUri": "",
        "uri": "/path/to/my.vcf.gz.tbi",
      },
    },
    "type": "VcfTabixAdapter",
    "vcfGzLocation": Object {
      "baseUri": "",
      "uri": "/path/to/my.vcf.gz",
    },
  },
  "renderers": Object {
    "PileupRenderer": Object {
      "type": "PileupRenderer",
    },
    "SvgFeatureRenderer": Object {
      "type": "SvgFeatureRenderer",
    },
  },
  "trackId": "trackId0",
  "type": "VariantTrack",
}
`;
